feat: added the audio quality to the API. fixes #899
